--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     margin: 0;
     --blue: #0ea5e9;
     --gray: #e2e8f0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
@@ -11,7 +12,12 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+svg {
+    width: 30px;
+    height: 30px;
 }
 
 .dashboard {
@@ -22,6 +28,9 @@
 .header {
     grid-area: 1 / 2 / 2 / 3;
     background: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-between;
 }
 
 .content {
@@ -29,10 +38,94 @@
     background-color: var(--gray);
 }
 
+.header-row-one {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+label {
+    margin: 15px;
+    margin-top: 25px;
+    margin-left: 25px;
+    display: flex;
+    align-items: start;
+    gap: 15px;
+  
+}
+
+
+.header-top-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin: 30px;
+    margin-right: 50px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+
+.header-top-right img {
+    width: 65px;
+}
 
 input[type="search"] {
     background-color: var(--gray);
     border: none;
     border-radius: 20px;
     padding: 8px;
+    width: 70%;
 }
+
+.header-row-two {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    
+}
+
+.header-row-two-left {
+    display: flex;
+    margin: 20px;
+    font-weight: bold;
+    gap: 10px;
+    column-gap: 20px;
+    
+}
+
+.header-row-two-left img {
+    width: 100px;
+    grid-area: 1/1/3/2;
+}
+
+.hello {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+.hello p:last-child {
+    font-size: 25px;
+}
+
+.header-row-two-right {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin-right: 50px;
+    gap: 60px;
+}
+
+.header-row-two-right button {
+    padding: 12px 35px;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--blue);
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
