--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 2.5fr;
+    grid-template-rows: 1fr 2.7fr;
 }
 
 svg {
@@ -133,8 +133,8 @@ input[type="search"] {
     color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding: 25px;
     gap: 100px;
 }
 
@@ -153,3 +153,141 @@ input[type="search"] {
     margin-right: 60px;
 }
 
+
+.row {
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 25px;
+    font-weight: bold;
+    color: #353535
+}
+
+.row span:first-child {
+    margin-left: 15px;
+}
+
+.row span:last-child {
+    margin-right: 130px
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 200px;
+    gap: 35px;
+    margin-left: 35px;
+    margin-bottom: 35px;
+}
+
+.card {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 20px 30px;
+    justify-content: space-between;
+    border-left: 7px solid goldenrod;
+    overflow: auto;
+}
+
+.svg-container {
+    align-self: flex-end;
+    display: flex;
+    gap: 20px;
+}
+
+section p:first-child {
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+section p:last-child {
+    color: #555;
+    font-size: 1rem;
+}
+
+p {
+    overflow: hidden;
+}
+
+.right-cards {
+    display: grid;
+    grid-template-columns: 80%;
+    grid-template-rows: 1fr 40px 0.7fr;
+    margin-left: 50px;
+    
+}
+
+.announcements {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px;
+
+}
+
+.announcements div {
+    border-bottom: 1px solid #aaa;
+    padding: 15px;
+}
+
+.announcements > div > p {
+    overflow: hidden;
+    color: #555;
+}
+
+.announcements div p:first-child {
+    font-weight: bold;
+    color: black;
+}
+
+.announcements div:last-child {
+    border: none;
+}
+
+.trends-title {
+    font-size: 24px;
+    font-weight: bold;
+    align-self: center;
+}
+
+.trends {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    color: #555;
+}
+
+.trend img {
+    width: 50px;
+    height: 50px;
+}
+
+.trend {
+    display: flex;
+    gap: 10px;
+}
+
+.pfname {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.pfname p:first-child {
+    font-weight: bold;
+    color: black;
+}
