--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 2.7fr;
+    grid-template-rows: 200px 2.7fr;
 }
 
 svg {
@@ -30,6 +30,7 @@ svg {
     background: white;
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 100px 100px;
     justify-content: space-between;
 }
 
@@ -96,7 +97,8 @@ input[type="search"] {
 }
 
 .header-row-two-left img {
-    width: 100px;
+    width: 75px;
+    height: 75px;
     grid-area: 1/1/3/2;
 }
 
